crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@tateishi_sample.md.snap
---
source: crates/mehen-markdown/tests/markdown.rs
---
path: "<fixture_path>"
loc:
  dloc: 23
  ploc: 12
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 11
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.4782608695652174
size:
  words: 47
  effective_content_units: 0.19583333333333333
  sections: 6
  headings: 6
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 23
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
      - 4
      - 5
    word_count: 5
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 5
    end_line: 7
    parent_section_id: 0
    child_section_ids: []
    word_count: 6
    block_count: 1
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 9
    end_line: 11
    parent_section_id: 0
    child_section_ids: []
    word_count: 8
    block_count: 1
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 13
    end_line: 15
    parent_section_id: 0
    child_section_ids: []
    word_count: 12
    block_count: 1
  - section_id: 4
    heading_level: 2
    heading_text: ~
    start_line: 17
    end_line: 19
    parent_section_id: 0
    child_section_ids: []
    word_count: 7
    block_count: 1
  - section_id: 5
    heading_level: 2
    heading_text: ~
    start_line: 21
    end_line: 23
    parent_section_id: 0
    child_section_ids: []
    word_count: 9
    block_count: 1
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 5
  cognitive_complexity: 0.2
  halstead:
    operators_distinct: 3
    operators_total: 19
    operands_distinct: 51
    operands_total: 53
    vocabulary: 54
    length: 72
    volume: 414.3519001557697
    difficulty: 1.558823529411765
    effort: 645.9014914192882
    embedded_volume: 0
    total_volume: 414.3519001557697
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 91.6875744680851
  section_balance_score: 0.85
  good_scaffold_score: 0
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0.1295744680851064
  evidence_coverage_score: 0
ai_era:
  filler_lazy_structure_risk: 0.5677021276595744
  labels:
    - large-unanchored-prose
    - low-artifact-density
    - low-repository-grounding
  top_contributors:
    - - large-unanchored-prose
      - 1
    - - low-artifact-density
      - 1
    - - low-repository-grounding
      - 0.8704255319148936
review:
  review_criticality_index: 1.6844680851063831
artifacts: []
prose:
  language_detection:
    dominant_language: ja
    blocks:
      - start_line: 1
        end_line: 1
        language: ja
      - start_line: 3
        end_line: 3
        language: ja
      - start_line: 5
        end_line: 5
        language: ja
      - start_line: 7
        end_line: 7
        language: ja
      - start_line: 9
        end_line: 9
        language: ja
      - start_line: 11
        end_line: 11
        language: ja
      - start_line: 13
        end_line: 13
        language: ja
      - start_line: 15
        end_line: 15
        language: ja
      - start_line: 17
        end_line: 17
        language: ja
      - start_line: 19
        end_line: 19
        language: ja
      - start_line: 21
        end_line: 21
        language: ja
      - start_line: 23
        end_line: 23
        language: ja
  english: ~
  japanese:
    script_composition:
      kanji_ratio: 0.366
      hiragana_ratio: 0.39
      katakana_ratio: 0.145
      latin_ratio: 0.089
      digit_ratio: 0.01
      script_entropy: 1.843
      visible_chars: 585
    readability:
      tateishi_rs: 27.779
      jouyou_grade_mean: 3.692
      hyougai_ratio: 0.009
    lexical:
      avg_sentence_chars: 32.105
      p90_sentence_chars: 61
      max_sentence_chars: 71
      comma_period_ratio: 1.769
      jukugo_density: 0.798
      sentence_count: 19
      char_count: 610
    wording:
      politeness_dominant: keitai
      keitai_count: 13
      jotai_count: 0
      honorific_count: 0
      keitai_jotai_mix_count: 0
      weak_phrase_count: 0
      redundant_expression_count: 0
      doubled_joshi_count: 14
      long_kanji_run_count: 0
      max_comma_violation_count: 0
      max_ten_violation_count: 1
      long_sentence_count: 0
      wording_quality_score: 0.83
    style_conformance:
      violations:
        - rule: rule-3-jouyou-only
          severity: warn
          count: 2
        - rule: rule-5-trailing-chouonpu
          severity: warn
          count: 3
      total_violations: 5
      violation_density_per_1000: 8.547
    short_doc_warning: false
  meta:
    short_doc_warning: false
    words_counted: 610
    sentences_counted: 19
    blocks_stripped: []
