crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@tight_list.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 8
  ploc: 7
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 1
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.125
size:
  words: 9
  effective_content_units: 0.0375
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 8
    parent_section_id: ~
    child_section_ids: []
    word_count: 9
    block_count: 6
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 2.76
  halstead:
    operators_distinct: 3
    operators_total: 6
    operands_distinct: 11
    operands_total: 11
    vocabulary: 14
    length: 17
    volume: 64.72503367497927
    difficulty: 1.5
    effort: 97.08755051246891
    embedded_volume: 0
    total_volume: 64.72503367497927
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 90.01
  section_balance_score: 0.85
  good_scaffold_score: 0
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0
  evidence_coverage_score: 0
ai_era:
  filler_lazy_structure_risk: 0.7075
  labels:
    - large-unanchored-prose
    - low-artifact-density
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - large-unanchored-prose
      - 1
    - - low-artifact-density
      - 1
    - - low-repository-grounding
      - 1
review:
  review_criticality_index: 0
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 3
        language: en
      - start_line: 4
        end_line: 4
        language: en
      - start_line: 5
        end_line: 5
        language: en
      - start_line: 6
        end_line: 6
        language: en
      - start_line: 8
        end_line: 8
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 1
      hapax_ratio: 1
      dis_ratio: 0
      lexical_density: 0.727
      avg_sentence_words: 1.833
      p90_sentence_words: 5
      max_sentence_words: 5
      stddev_sentence_words: 1.462
      avg_word_chars: 5
      p90_word_chars: 7
      sentence_count: 6
      words_total: 11
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 11
    sentences_counted: 6
    blocks_stripped: []
